--- a/excercises/work.ipynb
+++ b/excercises/work.ipynb
@@ -514,6 +514,11 @@
     "    return T_inv\n",
     "\n",
     "\n",
+    "CrossOp = lambda v: np.array([[    0, -v[2],  v[1]],\n",
+    "                              [ v[2],     0, -v[0]],\n",
+    "                              [-v[1],  v[0],     0]])\n",
+    "\n",
+    "\n",
     "def hest(\n",
     "    ps: np.ndarray,\n",
     "    qs: np.ndarray,\n",
@@ -537,11 +542,7 @@
     "        ps = Tp @ ps\n",
     "        qs = Tq @ qs\n",
     "    \n",
-    "    x = lambda v: np.array([[0, -1, v[1]],\n",
-    "                            [1, 0, -v[0]],\n",
-    "                            [-v[1], v[0], 0]])\n",
-    "    \n",
-    "    B = np.vstack([np.kron(q, x(p)) for p, q in zip(ps.T, qs.T)])\n",
+    "    B = np.vstack([np.kron(q, CrossOp(p)) for p, q in zip(ps.T, qs.T)])\n",
     "    _, _, V = np.linalg.svd(B)\n",
     "\n",
     "    H_pred = V[-1].reshape(3, 3).T\n",
@@ -585,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -595,9 +596,9 @@
       "[[-2  0  1]\n",
       " [ 1 -2  0]\n",
       " [ 0  0  3]]\n",
-      "[[-0.38  0.    0.19]\n",
-      " [ 0.19 -0.38  0.  ]\n",
-      " [ 0.   -0.    0.58]]\n"
+      "[[ 0.39  0.   -0.19]\n",
+      " [-0.19  0.39  0.  ]\n",
+      " [ 0.    0.   -0.58]]\n"
      ]
     }
    ],
@@ -611,6 +612,226 @@
     "H_pred = hest(q1, q2, normalize=True)\n",
     "print(np.array2string(H_true, precision=2, suppress_small=True))\n",
     "print(np.array2string(H_pred, precision=2, suppress_small=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Epipolar geometry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial.transform import Rotation\n",
+    "\n",
+    "K = camera_matrix(1000, (300, 200))\n",
+    "\n",
+    "R1 = np.eye(3)\n",
+    "t1 = np.zeros((3, 1))\n",
+    "\n",
+    "R2 = Rotation.from_euler('xyz', [.7, -.5, .8]).as_matrix()\n",
+    "t2 = np.array([[.2, 2, 1]]).T\n",
+    "\n",
+    "Q = InvPi(np.array([[1, .5, 4]]).T)\n",
+    "\n",
+    "q1 = projectpoints(K, R1, t1, Q)\n",
+    "q2 = projectpoints(K, R2, t2, Q)\n",
+    "\n",
+    "p1 = projectpoints(np.eye(3), R1, t1, Q)\n",
+    "p2 = projectpoints(np.eye(3), R2, t2, Q)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E = CrossOp(t2[:,0]) @ R2\n",
+    "F = np.linalg.inv(K).T @ E @ np.linalg.inv(K)\n",
+    "\n",
+    "assert np.isclose(p2.T @ E @ p1, 0), \"Essential matrix is wrong\"\n",
+    "assert np.isclose(q2.T @ F @ q1, 0), \"Fundamental matrix is wrong\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7.16724268e-03],\n",
+       "       [ 3.72647737e-04],\n",
+       "       [-4.40344636e+00]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F @ p1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.load('week03/TwoImageDataCar.npy', allow_pickle=True).item()\n",
+    "\n",
+    "# img1 = data['im1']\n",
+    "# R1 = data['R1']\n",
+    "# t1 = data['t1']\n",
+    "# img2 = data['im2']\n",
+    "# R2 = data['R2']\n",
+    "# t2 = data['t2']\n",
+    "# K = data['K']\n",
+    "\n",
+    "# fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "# ax[0].imshow(img1)\n",
+    "# ax[1].imshow(img2)\n",
+    "# for a in ax:\n",
+    "#     a.axis('off')\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Triangulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def triangulate(qs: np.ndarray, Ps: np.ndarray) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    qs: list of 2d points shape (2, n)\n",
+    "    Ps: list of 3x4 projection matrices\n",
+    "\n",
+    "    Triangulates points qs from two different views Ps\n",
+    "    \"\"\"\n",
+    "    if qs.shape[0] == 3:\n",
+    "        qs = Pi(qs)\n",
+    "\n",
+    "    B = np.vstack([P[2][None, :] * qs[:, i][:, None] - P[:-1] for i, P in enumerate(Ps)])\n",
+    "    _, _, V = np.linalg.svd(B)\n",
+    "\n",
+    "    return V[-1][:, None]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. ],\n",
+       "       [0.5],\n",
+       "       [4. ]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_pred = triangulate(\n",
+    "    Pi(np.concatenate((q1, q2), axis=1)),\n",
+    "    (\n",
+    "        projectpoints(K, R1, t1),\n",
+    "        projectpoints(K, R2, t2)\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "Pi(Q_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 12"
    ]
   }
  ],
