--- a/excercises/work.ipynb
+++ b/excercises/work.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -596,9 +596,9 @@
       "[[-2  0  1]\n",
       " [ 1 -2  0]\n",
       " [ 0  0  3]]\n",
-      "[[ 0.39  0.   -0.19]\n",
+      "[[ 0.39 -0.   -0.19]\n",
       " [-0.19  0.39  0.  ]\n",
-      " [ 0.    0.   -0.58]]\n"
+      " [ 0.   -0.   -0.58]]\n"
      ]
     }
    ],
@@ -630,18 +630,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.spatial.transform import Rotation\n",
     "\n",
+    "def rotation_matrix(*thetas: list[float]) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Returns a rotation matrix given the angles in the form of\n",
+    "    [theta_x, theta_y, theta_z]\n",
+    "    \"\"\"\n",
+    "    if len(thetas) == 1:\n",
+    "        thetas = thetas[0]\n",
+    "\n",
+    "    return Rotation.from_euler('xyz', thetas).as_matrix()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "K = camera_matrix(1000, (300, 200))\n",
     "\n",
     "R1 = np.eye(3)\n",
     "t1 = np.zeros((3, 1))\n",
     "\n",
-    "R2 = Rotation.from_euler('xyz', [.7, -.5, .8]).as_matrix()\n",
+    "R2 = rotation_matrix(.7, -.5, .8)\n",
     "t2 = np.array([[.2, 2, 1]]).T\n",
     "\n",
     "Q = InvPi(np.array([[1, .5, 4]]).T)\n",
@@ -655,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +696,7 @@
        "       [-4.40344636e+00]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +771,7 @@
        "       [4. ]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,6 +793,325 @@
    "metadata": {},
    "source": [
     "# Week 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Direct linear transform (DLT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "prettyprint = lambda arr, pres=2: print(np.array2string(arr, precision=pres, suppress_small=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 960.    960.    889.29  895.72 1030.71 1024.28  960.    960.  ]\n",
+      " [ 540.    540.    610.71  604.28  610.71  604.28  681.42  668.56]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q = np.array(list(product(range(2), repeat=3))).T\n",
+    "\n",
+    "_r = np.sqrt(2) / 2\n",
+    "R = np.array([[_r, -_r, 0],\n",
+    "              [_r, _r, 0],\n",
+    "              [0, 0, 1]])\n",
+    "\n",
+    "t = np.array([[0, 0, 10]]).T\n",
+    "\n",
+    "K = camera_matrix(1000, (1920 // 2, 1080 // 2))\n",
+    "\n",
+    "P = projectpoints(K, R, t)\n",
+    "\n",
+    "prettyprint(q := Pi(P @ InvPi(Q)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3292087342443577e-10"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pest(\n",
+    "    qs: np.ndarray,\n",
+    "    Qs: np.ndarray\n",
+    ") -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Estimates the projection matrix between two sets of points where\n",
+    "    Pi(P) = Pi(H @ Q)\n",
+    "    \"\"\"\n",
+    "    qs = InvPi(qs)\n",
+    "    Qs = InvPi(Qs)\n",
+    "    \n",
+    "    B = np.vstack([np.kron(Q, CrossOp(q)) for q, Q in zip(qs.T, Qs.T)])\n",
+    "    _, _, V = np.linalg.svd(B)\n",
+    "\n",
+    "    P_pred = V[-1].reshape(4, 3).T\n",
+    "    P_pred /= P_pred[2,2] # normalize\n",
+    "\n",
+    "    return P_pred\n",
+    "\n",
+    "P_pred = pest(q, Q)\n",
+    "q_est = Pi(P_pred @ InvPi(Q))\n",
+    "np.sqrt(np.square(np.linalg.norm(q - q_est, axis=0)).mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Checkeroard calibration Zhang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkerboard_points(\n",
+    "    n: int=8,\n",
+    "    m: int=8,\n",
+    "    *,\n",
+    "    only_corners: bool=False\n",
+    ") -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Returns the 3D coordinates of a checkerboard\n",
+    "    \"\"\"\n",
+    "    if only_corners:\n",
+    "        p = np.array(list(product([0, n-1], [0, m-1], [0.]))).T\n",
+    "    else:\n",
+    "        p = np.array(list(product(range(n), range(m), [0.]))).T\n",
+    "\n",
+    "    bias = np.array([[(n-1)/2, (m-1)/2, 0]]).T\n",
+    "    return p - bias\n",
+    "\n",
+    "Q_omega = checkerboard_points(10, 20)\n",
+    "\n",
+    "R_a = rotation_matrix(np.pi/10, 0, 0)\n",
+    "R_b = rotation_matrix(0, 0, 0)\n",
+    "R_c = rotation_matrix(-np.pi/10, 0, 0)\n",
+    "\n",
+    "Q_a = R_a @ Q_omega\n",
+    "Q_b = R_b @ Q_omega\n",
+    "Q_c = R_c @ Q_omega\n",
+    "\n",
+    "# 3d scatter\n",
+    "# fig = plt.figure()\n",
+    "# ax = fig.add_subplot(111, projection='3d')\n",
+    "# ax.scatter(*Q_a, label='A')\n",
+    "# ax.scatter(*Q_b, label='B')\n",
+    "# ax.scatter(*Q_c, label='C')\n",
+    "# ax.legend()\n",
+    "# plt.show()\n",
+    "\n",
+    "q_a = Pi(P @ InvPi(Q_a))\n",
+    "q_b = Pi(P @ InvPi(Q_b))\n",
+    "q_c = Pi(P @ InvPi(Q_c))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def estimateHomographies(Q_omega: np.ndarray, qs: list[np.ndarray]) -> list[np.ndarray]:\n",
+    "    \"\"\"\n",
+    "    Estimates the homographies between the 3D points and the 2D points.\n",
+    "\n",
+    "    Q_omega: 3D points\n",
+    "    qs: 2D points\n",
+    "    \"\"\"\n",
+    "    Q_omega_bar = Q_omega[:2]\n",
+    "    return [hest(q, Q_omega_bar) for q in qs]\n",
+    "\n",
+    "\n",
+    "def estimate_b(Hs: list[np.ndarray]) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Estimates the vector b which is used for the estimation of the intrinsics\n",
+    "    \"\"\"\n",
+    "    # b_true = np.array([B_true[0,0], B_true[0,1], B_true[1,1], B_true[0,2], B_true[1,2], B_true[2,2]])\n",
+    "\n",
+    "    V = list()\n",
+    "    for H in Hs:\n",
+    "\n",
+    "        v = lambda a, b: np.array([\n",
+    "            H[0,a]*H[0,b],\n",
+    "            H[0,a]*H[1,b] + H[1,a]*H[0,b],\n",
+    "            H[1,a]*H[1,b],\n",
+    "            H[2,a]*H[0,b] + H[0,a]*H[2,b],\n",
+    "            H[2,a]*H[1,b] + H[1,a]*H[2,b],\n",
+    "            H[2,a]*H[2,b]])\n",
+    "\n",
+    "        # print(v(0, 0) @ b_true - H[:, 0].T @ B_true @ H[:, 0])\n",
+    "\n",
+    "        v1 = v(0, 1)\n",
+    "        v2 = v(0, 0) - v(1, 1)        \n",
+    "\n",
+    "        V.extend((v1, v2))\n",
+    "    V = np.stack(V)\n",
+    "\n",
+    "    return np.linalg.svd(V)[-1][-1]\n",
+    "\n",
+    "\n",
+    "def estimateIntrinsics(Hs: list[np.ndarray]) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Estimates the camera matrix K, from the homographies\n",
+    "    \"\"\"\n",
+    "    b = estimate_b(Hs)\n",
+    "\n",
+    "    B = np.array([[b[0], b[1], b[3]],\n",
+    "                  [b[1], b[2], b[4]],\n",
+    "                  [b[3], b[4], b[5]]])\n",
+    "    \n",
+    "    v0 = (B[0,1]*B[0,2] - B[0,0]*B[1,2]) / (B[0,0]*B[1,1] - B[0,1]**2)\n",
+    "    lam = B[2,2] - (B[0,2]**2 + v0 * (B[0,1]*B[0,2] - B[0,0]*B[1,2])) / B[0,0]\n",
+    "    alpha = np.sqrt(lam / B[0,0])\n",
+    "    beta = np.sqrt(lam * B[0,0] / (B[0,0]*B[1,1] - B[0,1]**2))\n",
+    "    gamma = -B[0,1] * alpha**2 * beta / lam\n",
+    "    u0 = gamma * v0 / beta - B[0,2] * alpha**2 / lam\n",
+    "\n",
+    "    K = np.array([[alpha, gamma, u0],\n",
+    "                  [    0,  beta, v0],\n",
+    "                  [    0,     0,  1]])\n",
+    "\n",
+    "    return K\n",
+    "\n",
+    "\n",
+    "def estimateExtrinsics(K: np.ndarray, Hs: list[np.ndarray]) -> tuple[list[np.ndarray], list[np.ndarray]]:\n",
+    "    \"\"\"\n",
+    "    Estimates the extrinsics given the camera matrix and the homographies\n",
+    "\n",
+    "    K: Camera matrix\n",
+    "    Hs: Homographies\n",
+    "\n",
+    "    Returns the rotation matrices and the translation vectors\n",
+    "    \"\"\"\n",
+    "    Rs = list()\n",
+    "    ts = list()\n",
+    "\n",
+    "    K_inv = np.linalg.inv(K)\n",
+    "\n",
+    "    for H in Hs:\n",
+    "        t = K_inv @ H[:, 2]\n",
+    "\n",
+    "        if t[2] < 0:\n",
+    "            t = -t\n",
+    "            H = -H\n",
+    "\n",
+    "        r1 = K_inv @ H[:, 0][:, None]\n",
+    "        r2 = K_inv @ H[:, 1][:, None]\n",
+    "\n",
+    "        r1 /= np.linalg.norm(r1, axis=0)\n",
+    "        r2 /= np.linalg.norm(r2, axis=0)\n",
+    "        r3 = np.cross(\n",
+    "            r1.squeeze(),\n",
+    "            r2.squeeze())[:, None]\n",
+    "\n",
+    "        R = np.concatenate((r1, r2, r3), axis=1)\n",
+    "        Rs.append(R)\n",
+    "        ts.append(t[:, None])\n",
+    "\n",
+    "    return Rs, ts\n",
+    "\n",
+    "\n",
+    "def calibratecamera(\n",
+    "    qs: list[np.ndarray],\n",
+    "    Q: np.ndarray,\n",
+    "    *,\n",
+    "    verbose: bool=False\n",
+    ") -> tuple[np.ndarray, list[np.ndarray], list[np.ndarray]]:\n",
+    "    \"\"\"\n",
+    "    qs: list of 2d points\n",
+    "    Qs: 3d points\n",
+    "    \"\"\"\n",
+    "    Hs = estimateHomographies(Q, qs)\n",
+    "    K = estimateIntrinsics(Hs)\n",
+    "    Rs, ts = estimateExtrinsics(K, Hs)\n",
+    "\n",
+    "    if verbose:\n",
+    "        err = 0\n",
+    "        for R, t, q_true in zip(Rs, ts, qs):\n",
+    "            q_est = Pi(projectpoints(K, R, t, InvPi(Q)))\n",
+    "            _err = np.linalg.norm(q_true - q_est, axis=0) ** 2\n",
+    "            err += _err.mean()\n",
+    "\n",
+    "            # plt.scatter(*q_true, label='True')\n",
+    "            # plt.scatter(*q_est, label='Est')\n",
+    "            # plt.legend()\n",
+    "            # plt.show()\n",
+    "\n",
+    "        print(f'Reprojection error: {err:.4}')\n",
+    "\n",
+    "    return K, Rs, ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reprojection error: 2.586e+08\n"
+     ]
+    }
+   ],
+   "source": [
+    "Ke_est, Rs, ts = calibratecamera((q_a, q_b, q_c), Q_omega, verbose=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.32  0.    0.07]\n",
+      " [ 0.   -2.28  0.21]\n",
+      " [ 0.    0.    0.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "K_est, Rs, ts = calibratecamera([q + np.random.randn(2,1) for q in (q_a, q_b, q_c)], Q_omega)\n",
+    "\n",
+    "prettyprint(K - K_est)"
    ]
   },
   {
