--- a/excercises/work.ipynb
+++ b/excercises/work.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -596,9 +596,9 @@
       "[[-2  0  1]\n",
       " [ 1 -2  0]\n",
       " [ 0  0  3]]\n",
-      "[[ 0.39 -0.   -0.19]\n",
-      " [-0.19  0.39  0.  ]\n",
-      " [ 0.   -0.   -0.58]]\n"
+      "[[-0.39 -0.    0.19]\n",
+      " [ 0.19 -0.39 -0.  ]\n",
+      " [-0.   -0.    0.58]]\n"
      ]
     }
    ],
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,21 +738,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def triangulate(qs: np.ndarray, Ps: np.ndarray) -> np.ndarray:\n",
+    "def triangulate(qs: list[np.ndarray], Ps: list[np.ndarray]) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    qs: list of 2d points shape (2, n)\n",
     "    Ps: list of 3x4 projection matrices\n",
     "\n",
     "    Triangulates points qs from two different views Ps\n",
     "    \"\"\"\n",
-    "    if qs.shape[0] == 3:\n",
-    "        qs = Pi(qs)\n",
+    "    qs = [Pi(q) if q.shape[0] == 3 else q for q in qs]\n",
     "\n",
-    "    B = np.vstack([P[2][None, :] * qs[:, i][:, None] - P[:-1] for i, P in enumerate(Ps)])\n",
+    "    B = np.vstack([P[2][None, :] * q - P[:-1] for q, P in zip(qs, Ps)])\n",
     "    _, _, V = np.linalg.svd(B)\n",
     "\n",
     "    return V[-1][:, None]\n"
@@ -760,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +777,7 @@
    ],
    "source": [
     "Q_pred = triangulate(\n",
-    "    Pi(np.concatenate((q1, q2), axis=1)),\n",
+    "    (q1, q2),\n",
     "    (\n",
     "        projectpoints(K, R1, t1),\n",
     "        projectpoints(K, R2, t2)\n",
@@ -804,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1095,15 +1094,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-2.32  0.    0.07]\n",
-      " [ 0.   -2.28  0.21]\n",
+      "[[-1.9   0.    0.45]\n",
+      " [ 0.   -1.76  0.89]\n",
       " [ 0.    0.    0.  ]]\n"
      ]
     }
@@ -1119,6 +1118,108 @@
    "metadata": {},
    "source": [
     "# Week 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R1 = np.eye(3)\n",
+    "R2 = np.eye(3)\n",
+    "t1 = np.array([[0, 0, 1]]).T\n",
+    "t2 = np.array([[0, 0, 20]]).T\n",
+    "K1 = K2 = camera_matrix(700, (600, 400))\n",
+    "\n",
+    "Q = np.array([[1, 1, 0]]).T\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P1 = projectpoints(K1, R1, t1)\n",
+    "P2 = projectpoints(K2, R2, t2)\n",
+    "q1 = Pi(P1 @ InvPi(Q))\n",
+    "q2 = Pi(P2 @ InvPi(Q))\n",
+    "\n",
+    "q1_tilde = q1 + np.array([[1, -1]]).T\n",
+    "q2_tilde = q2 + np.array([[1, -1]]).T\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.449805855171643"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_tilde = Pi(triangulate((q1_tilde, q2_tilde), (P1, P2)))\n",
+    "reprojection_err = np.sqrt(\n",
+    "    np.linalg.norm(q1_tilde - Pi(P1 @ InvPi(Q_tilde))) ** 2 + \n",
+    "    np.linalg.norm(q2_tilde - Pi(P2 @ InvPi(Q_tilde))) ** 2\n",
+    ")\n",
+    "reprojection_err\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3418251459026311"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def triangulate_nonlin(\n",
+    "    qs: list[np.ndarray],\n",
+    "    Ps: list[np.ndarray],\n",
+    ") -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Non-linear triangulation\n",
+    "    \"\"\"\n",
+    "    import scipy.optimize\n",
+    "\n",
+    "    def compute_residuals(Q):\n",
+    "        Q = Q[:, None]\n",
+    "        return np.concatenate(\n",
+    "            [Pi(P @ InvPi(Q)) - q\n",
+    "             for q, P in zip(qs, Ps)],\n",
+    "            axis=0\n",
+    "        ).mean(axis=1)\n",
+    "    \n",
+    "    x0 = Pi(triangulate(qs, Ps))[:,0]\n",
+    "    x = scipy.optimize.least_squares(compute_residuals, x0)\n",
+    "    return x.x[:, None]\n",
+    "\n",
+    "Q_tilde_nonlin = triangulate_nonlin((q1_tilde, q2_tilde), (P1, P2))\n",
+    "\n",
+    "reprojection_err = np.sqrt(\n",
+    "    np.linalg.norm(q1_tilde - Pi(P1 @ InvPi(Q_tilde_nonlin))) ** 2 + \n",
+    "    np.linalg.norm(q2_tilde - Pi(P2 @ InvPi(Q_tilde_nonlin))) ** 2\n",
+    ")\n",
+    "reprojection_err\n"
    ]
   },
   {
